Added basic HTML structure for landing page and main content sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
   </section>
 
-  <!-- Existing Content (Initially Hidden) -->
+  <!-- Main Content (Initially Hidden) -->
   <section id="main-content" style="display:none;">
     
     <h1>Mental Health Check-In</h1>
@@ -66,11 +66,6 @@
       <p>&copy; 2025 Mental Health Check-In App</p>
     </footer>
   </section>
-
-  <div id="reminder-popup" class="reminder-popup" style="display:none;">
-    <p>Don't forget to check in!</p>
-    <button class="dismiss-btn" id="dismiss-btn">Dismiss</button>
-  </div>
 
   <script src="app.js"></script>
 </body>
