ensured check in buttorn is working

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
   <!-- Main Content (Initially Hidden) -->
   <section id="main-content" style="display:none;">
-    
     <h1>Mental Health Check-In</h1>
 
     <!-- Check-In List -->
@@ -60,13 +59,16 @@
     </section>
 
     <!-- Tips Section -->
-    <section id="tips"></section>
+    <section id="tips">
+      <h2>Self-Care Tips</h2>
+      <p>After logging your check-in, personalized tips will appear here.</p>
+    </section>
 
     <footer>
       <p>&copy; 2025 Mental Health Check-In App</p>
     </footer>
   </section>
 
-  <script src="app.js"></script>
+  <script src="app.js"></script> 
 </body>
 </html>
