--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <!-- Tips Section -->
     <section id="tips">
-      <h2>Self-Care Tips</h2>
-      <p>After logging your check-in, personalized tips will appear here.</p>
+      <h2>Motivational Quotes</h2>
+      <p>After logging your check-in, personalized quotes will appear here.</p>
     </section>
 
     <footer>
