--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <section id="tips">
       <h2>Motivational Quotes</h2>
       <p>After logging your check-in, personalized quotes will appear here.</p>
+      <p id="quote-text">Fetching a motivational quote...</p>
+      <p id="quote-author"></p>
     </section>
 
     <footer>
@@ -69,6 +71,6 @@
     </footer>
   </section>
 
-  <script src="app.js"></script> 
+  <script src="app.js"></script>
 </body>
 </html>
